...

    var title: String {
        switch self {
        case .removeFromLarder: LibraryDecisionAction.removeFromLarder.title
        case .markCompleted: LibraryDecisionAction.markDone.title
        case .download: "Download"
        case .play: "Play"
        case .pause: "Pause"
        }
    }

    var symbol: String {
        switch self {
...
